--- a/Loan_Portfolio/Views/Shared/_Layout.cshtml
+++ b/Loan_Portfolio/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="@Href(Style)">
     <title>@ViewBag.Title</title>
 	<script src="Scripts/tableFuncs.js"></script>
+	<script src="Scripts/DocDetail.js"></script>
 	<script src="Scripts/angular.js"></script>
 	<script src="Scripts/angular.min.js"></script>
 	<script src="Scripts/jquery-3.1.0.min.js"></script>
